AM_CPPFLAGS = -I../../inc

noinst_LIBRARIES = libuGUIFont.a
libuGUIFont_a_SOURCES = font_4x6.c \
                        font_5x12.c \
                        font_5x8.c \
                        font_6x8.c \
                        font_6x10.c \
                        font_7x12.c \
                        font_8x8.c \
                        font_8x12.c \
                        font_8x12_cyrillic.c \
                        font_8x14.c \
                        font_10x16.c \
                        font_12x16.c \
                        font_12x20.c \
                        font_16x26.c \
                        font_22x36.c \
                        font_24x40.c \
                        font_32x53.c
